better design 02h46min

--- a/src/com/yahiab/graphix/view/_3d/viewer.css
+++ b/src/com/yahiab/graphix/view/_3d/viewer.css
@@ -247,7 +247,7 @@
 }
 
 .context-menu {
-    -fx-background-color: #DF5B5B;
+    -fx-background-color: #ffffff;
 }
 
 /************************************************************/
